if(USE_ZEROMQ)
    include(${ClickHouse_SOURCE_DIR}/cmake/dbms_glob_sources.cmake)
    add_headers_and_sources(clickhouse_storage_socket .)
    add_library(clickhouse_storage_socket ${clickhouse_storage_socket_sources})
    target_link_libraries(clickhouse_storage_socket PRIVATE clickhouse_common_io ${CPPZMQ_LIBRARY} ${ZEROMQ_LIBRARY})
    if(NOT USE_INTERNAL_ZEROMQ_LIBRARY)
        target_include_directories(clickhouse_storage_socket SYSTEM BEFORE PRIVATE ${ZEROMQ_INCLUDE_DIR})
    endif()
endif()